<resources>
    <string name="app_name">Root Checker</string>
    <string name="icon">Icon</string>
    <string name="android_version">Android Version :</string>
    <string name="device">Device :</string>
    <string name="verify">Verify</string>
    <string name="verify_root_status">Verify Root Status</string>
    <string name="cts">CTS :</string>
    <string name="basic_integrity">Basic Integrity :</string>
    <string name="verify_safetynet_status">Verify SafetyNet Status</string>
    <string name="verify_play_integrity_status">Verify Play Integrity Status</string>
    <string name="meets_basic_integrity">Basic Integrity :</string>
    <string name="meets_device_integrity">Device Integrity :</string>
    <string name="meets_strong_integrity">Strong Integrity :</string>
</resources>